# Vega_cpp_ci-cd

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  benchmark.cpp  main.cpp  test_add.cpp
.github/workflows/: test.yaml
include/: my_add.h
src/: my_add.cpp
